--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-    <div id="container" class="overlay">
+    <div id="overlay"></div>
+    <div id="container">
         <div id="nav">
-            <div class="brand-shop">
-                <h3>
-                    <b>Logo</b>
-                </h3>
-            </div>
+            <p class="logo">
+                LOGO
+            </p>
             <div class="sidebar">
+                <div class="close"><i class="fa-solid fa-xmark"></i></div>
                 <div class="menu">
                     <ul class="menu-item">
                         <li><a class="menu-link" href="#">Shirts</a></li>
